--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "license": "MIT",
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
+        "@vitest/coverage-v8": "^3.1.3",
         "typescript": "^5.0.0",
         "vitest": "^3.1.3"
     },
