--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
     "name": "@synet/core",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "Core cryptographic and identity primitives for Synet agents.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "private": false,
+    "publishConfig": {
+        "access": "public"
+    },
     "scripts": {
         "build": "tsc",
         "test": "vitest run",
@@ -30,6 +34,8 @@
         "vitest": "^3.1.3"
     },
     "dependencies": {
-        "prettier": "^3.5.3"
+        "prettier": "^3.5.3",
+        "tweetnacl": "^1.0.3",
+        "tweetnacl-util": "^0.15.1"
     }
 }
