--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "publishConfig": {
         "access": "public"
     },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/synthetism/synet/packages/synet-core.git"
+    },
     "scripts": {
         "build": "tsc",
         "test": "vitest run",
@@ -18,15 +22,7 @@
         "lint": "biome lint ./src",
         "format": "prettier --write 'src/**/*.ts'",
         "prepublishOnly": "npm run lint && npm run build && npm test"
-    },
-    "keywords": [
-        "synet",
-        "identity",
-        "crypto",
-        "agent"
-    ],
-    "author": "Synet Team",
-    "license": "MIT",
+    },  
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
         "@vitest/coverage-v8": "^3.1.3",
@@ -37,5 +33,15 @@
         "prettier": "^3.5.3",
         "tweetnacl": "^1.0.3",
         "tweetnacl-util": "^0.15.1"
-    }
+    },
+    "keywords": [
+        "synet",
+        "identity",
+        "crypto",
+        "agent",
+        "Synthetism"
+    ],
+    "author": "Synet Team",
+    "homepage": "https://synthetism.ai/synet",
+    "license": "MIT"
 }
