--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     },
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
+        "@types/node": "^22.15.18",
         "@vitest/coverage-v8": "^3.1.3",
+        "npm": "^11.4.0",
         "prettier": "^3.5.3",
         "typescript": "^5.0.0",
         "vitest": "^3.1.3"
