--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
       "outDir": "dist",
       "rootDir": "src",
       "strict": true,
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
     },
-    "include": ["src"]
+    "include": ["src"],
+    "exclude": ["node_modules", "dist", "test", "**/*.test.ts"]
   }
   
