--- a/package.json
+++ b/package.json
@@ -1,49 +1,55 @@
 {
-    "name": "@synet/core",
-    "version": "0.1.3",
-    "description": "Core cryptographic and identity primitives for Synet agents.",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "private": false,
-    "publishConfig": {
-        "access": "public"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/synthetism/synet/packages/synet-core.git"
-    },
-    "scripts": {
-        "build": "tsc",
-        "test": "vitest run",
-        "dev:test": "vitest",
-        "clean": "rm -rf dist",
-        "prebuild": "npm run clean && npm test",
-        "coverage": "vitest run --coverage",
-        "lint": "biome lint ./src",
-        "format": "prettier --write 'src/**/*.ts'",
-        "prepublishOnly": "npm run lint && npm run build && npm test"
-    },
-    "devDependencies": {
-        "@biomejs/biome": "^1.9.4",
-        "@types/node": "^22.15.18",
-        "@vitest/coverage-v8": "^3.1.3",
-        "npm": "^11.4.0",
-        "prettier": "^3.5.3",
-        "typescript": "^5.0.0",
-        "vitest": "^3.1.3"
-    },
-    "dependencies": {
-        "tweetnacl": "^1.0.3",
-        "tweetnacl-util": "^0.15.1"
-    },
-    "keywords": [
-        "synet",
-        "identity",
-        "crypto",
-        "agent",
-        "Synthetism"
-    ],
-    "author": "Synet Team",
-    "homepage": "https://synthetism.ai/synet",
-    "license": "MIT"
+  "name": "@synet/core",
+  "version": "0.1.3",
+  "description": "Core cryptographic and identity primitives for Synet agents.",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/synthetism/synet-core.git"
+  },
+  "scripts": {
+    "build": "tsc",
+    "test": "vitest run",
+    "dev:test": "vitest",
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean && npm test",
+    "coverage": "vitest run --coverage",
+    "lint": "biome lint ./src",
+    "format": "prettier --write 'src/**/*.ts'",
+    "prepublishOnly": "npm run lint && npm run build && npm test",
+    "version:dev": "npm version --no-git-tag-version prerelease --preid=dev",
+    "version:patch": "npm version --no-git-tag-version patch",
+    "version:minor": "npm version --no-git-tag-version minor",
+    "version:major": "npm version --no-git-tag-version major",
+    "publish:dev": "npm publish --registry=http://registry.dig.run/ --tag dev",
+    "publish:prod": "npm publish --registry=https://registry.npmjs.org/"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@types/node": "^22.15.18",
+    "@vitest/coverage-v8": "^3.1.3",
+    "npm": "^11.4.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.0.0",
+    "vitest": "^3.1.3"
+  },
+  "dependencies": {
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1"
+  },
+  "keywords": [
+    "synet",
+    "identity",
+    "crypto",
+    "agent",
+    "Synthetism"
+  ],
+  "author": "Synet Team",
+  "homepage": "https://synthetism.ai/synet",
+  "license": "MIT"
 }
